[gd_scene load_steps=4 format=3 uid="uid://uflhx1lgqa7k"]

[ext_resource type="Script" uid="uid://bc87eoa7gtviv" path="res://scripts/square_attacker.gd" id="1_aglep"]
[ext_resource type="Script" uid="uid://f2p066rd6ixd" path="res://addons/2d_shapes/shapes/Rectangle.gd" id="1_uvpmk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aglep"]
size = Vector2(90, 90)

[node name="SquareAttacker" type="Area2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_aglep")

[node name="Shape" type="Node2D" parent="."]
script = ExtResource("1_uvpmk")
square = true
style = 1
outline_width = 8
metadata/_custom_type_script = "uid://f2p066rd6ixd"

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_aglep")

[node name="Screen Notifier" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-50, -50, 100, 100)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="Screen Notifier" to="." method="_on_screen_notifier_screen_exited"]
